infrastructure/gateway/overlays/staging/gateway-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public
  namespace: nginx-gateway
  annotations:
    cert-manager.io/issuer: letsencrypt-staging
spec:
  gatewayClassName: nginx
  listeners:
    - name: https                 
      protocol: HTTPS
      port: 443
      hostname: testshop.xyz
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: cert-testshop-xyz
